kubernetes/apps/default/calibre/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: calibre
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`calibre.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: calibre
          namespace: default
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "{SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
